test: improve and update tests for title search